[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caching-proxy"
version = "0.1.0"
description = "A simple caching proxy tool"
readme = "README.md"
authors = [{ name = "Taylor Hernández", email = "taylor20sep.hc@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.0",
]

[project.scripts]
caching-proxy = "caching_proxy.cli:main"